viewer process aspectratio only after modal is fully shown
Before, the image tags had data-aspectratio, and were thus
immediately processed by lazysizes-aspectratio on page load.
This had two problems:

1. If the modal wasn't shown, the JS may not have been able to reliably
calculate proper dimensions.

2. If a /viewer link was accessed, the modal was in the process
of being animated when the aspectratio JS tried to do it's thing,
which really confused it, and seemed to lead to some serious JS
blockage, taking longer for modal to actually load etc.

--- a/app/views/curation_concerns/base/_chf_image_viewer.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer.html.erb
@@ -45,7 +45,9 @@
                     tabindex: "0",
                     role: "button",
                     data: {
-                      aspectratio: "#{member_presenter.representative_width}/#{member_presenter.representative_height}", # used for lazysizes-aspectratio
+                      # we don't want lazysizes-aspectratio to catch this right away, our own custom
+                      # JS will convert it to a normal `data-aspectratio` and call lazysizes-aspectratio on it.
+                      delayed_aspectratio: "#{member_presenter.representative_width}/#{member_presenter.representative_height}", # used for lazysizes-aspectratio
                       trigger: 'change-viewer-source',
                       index: i + 1,
                       title: member_presenter.link_name,
