Add checkbox for public domain facet to search, refs #709

--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -43,4 +43,8 @@
     </div><!-- /.input-group-btn -->
 
   </div><!-- /.input-group -->
+  <div>
+    <%= check_box_tag 'filter-public-domain' %>
+    <label for="filter-public-domain"><%= "Search only Public Domain" %></label>
+  </div>
 <% end %>
