viewer aspectratio, not until it's actually ready

--- a/app/assets/stylesheets/local/chf_image_viewer.scss
+++ b/app/assets/stylesheets/local/chf_image_viewer.scss
@@ -323,7 +323,7 @@
       flex-shrink: 0;
 
       .viewer-thumb-img {
-        height: auto;
+        height: initial;
         max-width: none;
         width: 60px;
         max-height: 120px;
