try with a min height

--- a/app/assets/stylesheets/local/chf_image_viewer.scss
+++ b/app/assets/stylesheets/local/chf_image_viewer.scss
@@ -324,6 +324,7 @@
 
       .viewer-thumb-img {
         height: initial;
+        min-height: 40px;
         max-width: none;
         width: 60px;
         max-height: 120px;
