--- a/app/assets/stylesheets/local/chf_image_viewer.scss
+++ b/app/assets/stylesheets/local/chf_image_viewer.scss
@@ -20,6 +20,8 @@
     contents and have CSS properties relevant to that too.
 */
 
+$chf_image_viewer_thumb_width: 60px;
+
 // Override some bootstrap modal stuff to give us a full-viewport modal
 #chf-image-viewer-modal {
   .modal-dialog {
@@ -277,8 +279,8 @@
     max-height: 100%; // IE 11 needs this, although others don't, i dunno.
 
     .viewer-thumb-img {
-      height: 80px;
-      max-width: 240px;
+      max-height: 80px;
+      width: $chf_image_viewer_thumb_width;
 
       cursor: pointer;
 
@@ -319,14 +321,11 @@
       overflow-y: auto;
       overflow-x: hidden;
       // need to leave enough room for scroll-bar on browsers that count that inside
-      width: calc(60px * 2 + 7px * 3 + 1em);
+      width: calc(#{$chf_image_viewer_thumb_width} * 2 + 7px * 3 + 1em);
       flex-shrink: 0;
 
       .viewer-thumb-img {
-        height: auto;
-        max-width: none;
-        width: 60px;
-        max-height: 120px;
+        max-height: $chf_image_viewer_thumb_width * 2;
       }
     }
     .viewer-download {
