viewer thumbs, don't use aspectratio js
Use fixed aspectratio-based height in DOM instead.

The JS was having trouble on this page, not entirely sure why, but couldn't fix it.
Performance/browser-freeze-up problems.

--- a/app/assets/stylesheets/local/chf_image_viewer.scss
+++ b/app/assets/stylesheets/local/chf_image_viewer.scss
@@ -20,7 +20,7 @@
     contents and have CSS properties relevant to that too.
 */
 
-$chf_image_viewer_thumb_width: 60px;
+$chf_image_viewer_thumb_width: 60px; // Needs to match MemberHelper::VIEWER_THUMB_WIDTH
 
 // Override some bootstrap modal stuff to give us a full-viewport modal
 #chf-image-viewer-modal {
