--- a/app/views/curation_concerns/base/_chf_image_viewer.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer.html.erb
@@ -41,11 +41,11 @@
               <% work.viewable_member_presenters.each_with_index do |member_presenter, i| -%>
                 <%= tag "img",
                     class: "lazyload viewer-thumb-img",
+                    height: member_proportional_height(member_presenter),
                     alt: "",
                     tabindex: "0",
                     role: "button",
                     data: {
-                      aspectratio: "#{member_presenter.representative_width}/#{member_presenter.representative_height}", # used for lazysizes-aspectratio
                       trigger: 'change-viewer-source',
                       index: i + 1,
                       title: member_presenter.link_name,
