Implement public domain filter in search_builder, refs #709

--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -44,7 +44,7 @@
 
   </div><!-- /.input-group -->
   <div>
-    <%= check_box_tag 'filter-public-domain' %>
-    <label for="filter-public-domain"><%= "Search only Public Domain" %></label>
+    <%= check_box_tag 'filter_public_domain' %>
+    <label for="filter_public_domain"><%= "Search only Public Domain" %></label>
   </div>
 <% end %>
