inline-block seems needed for proper aspectratio JS setting
Not sure why, not sure why it used to look like it was working without this.
On viewer, worked in chrome without this but not FF.
On show page, didn't work in chrome or FF.

--- a/app/assets/stylesheets/local/chf_image_viewer.scss
+++ b/app/assets/stylesheets/local/chf_image_viewer.scss
@@ -279,6 +279,7 @@ $chf_image_viewer_thumb_width: 60px; // Needs to match MemberHelper::VIEWER_THUM
     max-height: 100%; // IE 11 needs this, although others don't, i dunno.
 
     .viewer-thumb-img {
+      display: inline-block; // makes FF respect width on unloaded image, not sure why needed
       max-height: 80px;
       width: $chf_image_viewer_thumb_width;
 
