--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -1,7 +1,7 @@
 <%# copied from https://github.com/samvera/sufia/blob/v7.3.0/app/views/catalog/_search_form.html.erb
     to override searchbox dropdown visibility %>
 <%= form_tag search_form_action, method: :get, id: "search-form-header", role: "search" do %>
-  <%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :search_field, :qt, :page, :utf8)) %>
+  <%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :search_field, :qt, :page, :utf8, :filter_public_domain)) %>
   <%= hidden_field_tag :search_field, 'all_fields' %>
   <div class="input-group">
 
@@ -44,7 +44,9 @@
 
   </div><!-- /.input-group -->
   <div>
-    <%= check_box_tag 'filter_public_domain' %>
+    <%# hidden field is required in order to allow users to un-check the box %>
+    <%= hidden_field_tag 'filter_public_domain', value=0 %>
+    <%= check_box_tag 'filter_public_domain', value=1, checked=(params.fetch("filter_public_domain", 0).to_i > 0) %>
     <label for="filter_public_domain"><%= "Search only Public Domain" %></label>
   </div>
 <% end %>
