non-spinning static loading svg for thumbs
I think the spinning SVG was putting too much load on CPU when there were hundreds of them on a page, especially on slower devices

--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -158,7 +158,9 @@
       img.show-page-image-image {
         width: 100%;
         &.lazyload, &.lazyloading {
-          background: #AAA asset-url('spinner.svg') no-repeat center;
+          background: #AAA asset-url('static-progress.svg') no-repeat;
+          background-position: center center;
+          background-size: 50%;
         }
         vertical-align: bottom;
         min-height: 100px; // just so it's something!
