--- a/app/assets/stylesheets/local/chf_image_viewer.scss
+++ b/app/assets/stylesheets/local/chf_image_viewer.scss
@@ -294,9 +294,10 @@ $chf_image_viewer_thumb_width: 60px; // Needs to match MemberHelper::VIEWER_THUM
       }
 
       &.lazyload, &.lazyloading, &.lazyload {
-        background: #AAA asset-url('spinner.svg') no-repeat center;
+        background: #AAA asset-url('static-progress.svg') no-repeat;
         background-size: 34px 34px;
         background-clip: content-box;
+        background-position: center center;
       }
     }
   }
