--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -2,8 +2,14 @@ $dark-navy: #1f2534;
 $bright-blue: #02BAF4;
 $bg-grey: #f1f3f4;
 
+
+// Bootstrap 3.x overrides
 $brand-inverse: $dark-navy;
 $brand-primary: $bright-blue;
+$font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-size-base: 16px;
+
+
 $transparent-background: rgba(0,0,0,0.25);
 
 @mixin all-white-links {
