link hover color match chemheritage.org brand

--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -6,6 +6,7 @@ $bg-grey: #f1f3f4;
 // Bootstrap 3.x overrides
 $brand-inverse: $dark-navy;
 $brand-primary: $bright-blue;
+$link-hover-color: #205D94;
 $font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-size-base: 16px;
 
