--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -9,6 +9,7 @@ $brand-primary: $bright-blue;
 $link-hover-color: #205D94;
 $font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-size-base: 16px;
+$navbar-inverse-link-color: $brand-primary;
 
 
 $transparent-background: rgba(0,0,0,0.25);
