--- a/app/assets/stylesheets/local/navbar.scss
+++ b/app/assets/stylesheets/local/navbar.scss
@@ -11,6 +11,10 @@
   z-index: 1002;
   /* offset left margin of first button */
   margin-left: -15px;
+
+  &.navbar-inverse .navbar-nav > li > a:not(:hover):not(:focus) {
+    color: lighten($gray-light, 15%);
+  }
 }
 
 /* masthead navbar has an effective margin of 20 */
@@ -18,17 +22,6 @@
   min-height: 90px;
   padding: 20px 5px 20px 20px;
   text-transform: uppercase;
-  .navbar-nav > li > a,
-  .navbar-nav > li > a:hover,
-  .navbar-nav > li > a:focus,
-  .navbar-header > a,
-  .navbar-header > a:hover,
-  .navbar-header > a:focus {
-    color: $brand-primary;
-    text-decoration: none;
-    font-style: light;
-    font-stretch: expanded;
-  }
 
   .navbar-brand {
     padding: 0;
