increase bootstrap base line-height slightly
Closer to chemheritage.org brand (actually sometimes 1.6 there), and definitely makes block text more readable

--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -4,6 +4,7 @@ $bg-grey: #f1f3f4;
 
 
 // Bootstrap 3.x overrides
+$line-height-base: 1.5; // closer to chemheritage.org brand, and more readable than BS default 1.428571429
 $brand-inverse: $dark-navy;
 $brand-primary: $bright-blue;
 $link-hover-color: #205D94;
