bg-grey => bg-lightly-shaded, don't assume color

--- a/app/assets/stylesheets/local/homepage.scss
+++ b/app/assets/stylesheets/local/homepage.scss
@@ -112,7 +112,7 @@
   }
   @media (min-width: $screen-sm-min) {
     .featured-collection-container {
-      background-color: $bg-grey;
+      background-color: $bg-lightly-shaded;
       display: flex;
       align-items: center;
       .featured-collection-callouts {
