--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -14,6 +14,11 @@ $font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-s
 $font-size-base: 16px;
 $navbar-inverse-link-color: $brand-primary;
 
+$well-bg: $bg-lightly-shaded;
+$navbar-default-bg: $bg-lightly-shaded;
+$panel-default-heading-bg: $bg-lightly-shaded;
+$panel-footer-bg: $bg-lightly-shaded;
+$breadcrumb-bg: $bg-lightly-shaded;
 
 $transparent-background: rgba(0,0,0,0.25);
 
