scss add brand alt header styles

--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -2,6 +2,8 @@ $dark-navy: #1f2534;
 $bright-blue: #02BAF4;
 $bg-grey: #f1f3f4;
 $bg-lightly-shaded: $bg-grey;
+$brand-alt-header-font: "Roboto Condensed";
+$brand-alt-header-weight: 700;
 
 
 
