--- a/app/views/sufia/homepage/index.html.erb
+++ b/app/views/sufia/homepage/index.html.erb
@@ -11,7 +11,7 @@
     <div class="col-xs-12 col-md-5">
       <div class="row search-container">
         <div class="digital-description col-xs-12 col-sm-6 col-md-12">
-          <h2>Digital Collections</h2>
+          <h2 class="brand-alt-h2">Digital Collections</h2>
           <p>Search a growing selection of our digitized materials in the history of science: artifacts, photographs, advertisements, manuscripts, letters, books, and more.</p>
         </div>
         <div class="search-callouts col-xs-12 col-sm-6 col-md-12">
@@ -32,7 +32,7 @@
     <div class="col-xs-12 col-sm-6">
       <div class="row featured-collection-callouts no-gutters">
         <div class="col-xs-12">
-          <h2>Featured Collection</h2>
+          <h2 class="brand-alt-h2">Featured Collection</h2>
           <p>The <%= link_to "Beckman Historical Collection", collection_path('wh246s128') %> covers the life and career of American scientist and philanthropist Dr. Arnold O. Beckman (1900–2004) and the growth of his companies. When Dr. Beckman invented the first commercially successful pH meter in 1934, he became a key player in both the American scientific instrument industry and the 20th-century scientific instrumentation revolution.</p>
           <%= link_to "BROWSE COLLECTIONS",
             collections_path,
