--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -7,6 +7,7 @@ ol.catalog {
 .facets {
   .panel-heading {
      border-radius: 0;
+     margin-bottom: 0;
      h3 {
       font-size: $font-size-base;
       color: $brand-inverse;
@@ -38,4 +39,18 @@ ol.catalog {
       letter-spacing: 0.01em;
      }
   }
+  .facets-toggle {
+    margin-right: 0;
+  }
 }
+
+@media (max-width: 768px) {
+  #facets .top-panel-heading {
+    border-radius: 0;
+    margin-bottom: 0;
+    h2 {
+      line-height: 2.4;
+    }
+  }
+}
+
