facets remove excess sloppy whitespace at bottom of facet value list

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -39,6 +39,11 @@ ol.catalog {
       letter-spacing: 0.01em;
      }
   }
+
+  .facet-values {
+    margin-bottom: 0;
+  }
+
   .facets-toggle {
     margin-right: 0;
   }
