--- a/app/views/curation_concerns/generic_works/_generic_work.html.erb
+++ b/app/views/curation_concerns/generic_works/_generic_work.html.erb
@@ -1,2 +1,22 @@
 <%# This is a search result view %>
-<%= render 'catalog/document', document: generic_work, document_counter: generic_work_counter  %>
+
+<%# sufia generated this:
+
+  render 'catalog/document', document: generic_work, document_counter: generic_work_counter
+
+# But we're taking it over to do what we want instead using simpler partials without
+# so many layers of indirection.
+
+# If we want to override only for certain list-view-types, may want to guard with
+    document_index_view_type == :list
+%>
+
+
+<li id="document_<%= generic_work.to_param %>" class="document <%= render_document_class generic_work %>" itemscope itemtype="<%= generic_work.itemtype %>">
+  <div class="row">
+    <%= render_document_partial(generic_work, :index_header, document_counter: generic_work_counter) %>
+    <%= render_document_partial(generic_work, :thumbnail, document_counter: generic_work_counter) %>
+    <%= render_document_partial(generic_work, :index, document_counter: generic_work_counter) %>
+  </div>
+</li>
+
