unroll default result item more, start to customize

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -73,3 +73,12 @@ ol.catalog {
   }
 }
 
+// Actual results, restyled by us
+
+.chf-results-list-item {
+  display: flex;
+  .chf-results-list-item-thumb {
+    width: 200px;
+  }
+}
+
