--- a/app/views/curation_concerns/generic_works/_generic_work.html.erb
+++ b/app/views/curation_concerns/generic_works/_generic_work.html.erb
@@ -12,11 +12,28 @@
 %>
 
 
-<li id="document_<%= generic_work.to_param %>" class="document <%= render_document_class generic_work %>" itemscope itemtype="<%= generic_work.itemtype %>">
-  <div class="row">
-    <%= render_document_partial(generic_work, :index_header, document_counter: generic_work_counter) %>
-    <%= render_document_partial(generic_work, :thumbnail, document_counter: generic_work_counter) %>
-    <%= render_document_partial(generic_work, :index, document_counter: generic_work_counter) %>
-  </div>
+<li id="document_<%= generic_work.to_param %>" class="chf-results-list-item document <%= render_document_class generic_work %>" itemscope itemtype="<%= generic_work.itemtype %>">
+    <div class="chf-results-list-item-thumb">
+      <%= render_thumbnail_tag generic_work %>
+    </div>
+
+    <div class="chf=results-list-item-content">
+      <%= render_document_partial(generic_work, :index_header, document_counter: generic_work_counter) %>
+
+      <table class="table">
+        <% doc_presenter = index_presenter(generic_work) %>
+        <% index_fields(generic_work).each do |field_name, field| -%>
+          <% if should_render_index_field? generic_work, field %>
+            <tr>
+              <th><span class="attribute-label h4"><%= render_index_field_label generic_work, field: field_name %></span></th>
+              <td><%= doc_presenter.field_value field_name %></td>
+            </tr>
+          <% end %>
+        <% end %>
+      </table>
+
+    </div>
+    <%# render_document_partial(generic_work, :thumbnail, document_counter: generic_work_counter) %>
+    <%# render_document_partial(generic_work, :index, document_counter: generic_work_counter) %>
 </li>
 
