results thumb width standardized with show page

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -78,7 +78,7 @@ ol.catalog {
 .chf-results-list-item {
   display: flex;
   .chf-results-list-item-thumb {
-    width: 200px;
+    width: 208px; // Should match ImageServiceHelper::BASE_WIDTHS[:standard]
   }
   .chf-results-list-item-head {
     margin-top: 0;
