search results begin customizing metadata

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -89,5 +89,13 @@ ol.catalog {
       }
     }
   }
+  .attribute-label {
+    color: #888;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 0.85em;
+    letter-spacing: 0.015em;
+    margin-right: 0.66em;
+  }
 }
 
