--- a/app/views/curation_concerns/generic_works/_generic_work.html.erb
+++ b/app/views/curation_concerns/generic_works/_generic_work.html.erb
@@ -22,17 +22,17 @@
         <%= link_to generic_work.title_or_label, generic_work %>
       </h2>
 
-      <table class="table">
+      <ul class="list-unstyled">
         <% doc_presenter = index_presenter(generic_work) %>
         <% index_fields(generic_work).each do |field_name, field| -%>
           <% if should_render_index_field? generic_work, field %>
-            <tr>
-              <th><span class="attribute-label h4"><%= render_index_field_label generic_work, field: field_name %></span></th>
-              <td><%= doc_presenter.field_value field_name %></td>
-            </tr>
+            <li>
+              <span class="attribute-label"><%= render_index_field_label generic_work, field: field_name %></span>
+              <%= doc_presenter.field_value field_name %>
+            </li>
           <% end %>
         <% end %>
-      </table>
+      </ul>
 
     </div>
     <%# render_document_partial(generic_work, :thumbnail, document_counter: generic_work_counter) %>
