--- a/app/views/curation_concerns/generic_works/_generic_work.html.erb
+++ b/app/views/curation_concerns/generic_works/_generic_work.html.erb
@@ -18,12 +18,13 @@
     </div>
 
     <div class="chf-results-list-item-content">
+      <% doc_presenter = Chf::IndexPresenter.new(generic_work, self) %>
+
       <h2 class="chf-results-list-item-head brand-alt-h2">
         <%= link_to generic_work.title_or_label, generic_work %>
       </h2>
 
       <ul class="list-unstyled">
-        <% doc_presenter = index_presenter(generic_work) %>
         <% index_fields(generic_work).each do |field_name, field| -%>
           <% if should_render_index_field? generic_work, field %>
             <li>
