--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -73,15 +73,22 @@ ol.catalog {
   }
 }
 
+ol.catalog {
+  padding: 0;
+}
+
 // Actual results, restyled by us
 
 .chf-results-list-item {
   display: flex;
+  margin-bottom: 30px;
   .chf-results-list-item-thumb {
     width: 208px; // Should match ImageServiceHelper::BASE_WIDTHS[:standard]
+    margin-right: 30px;
   }
   .chf-results-list-item-head {
     margin-top: 0;
+    font-size: $font-size-h3;
     a {
       color: $brand-inverse;
       &:hover, &:focus {
