--- a/app/views/curation_concerns/generic_works/_generic_work.html.erb
+++ b/app/views/curation_concerns/generic_works/_generic_work.html.erb
@@ -13,13 +13,17 @@
 
 
 <li id="document_<%= generic_work.to_param %>" class="chf-results-list-item document <%= render_document_class generic_work %>" itemscope itemtype="<%= generic_work.itemtype %>">
+    <% doc_presenter = Chf::IndexPresenter.new(generic_work, self) %>
+
+
     <div class="chf-results-list-item-thumb">
-      <%= render_thumbnail_tag generic_work %>
+      <%# render_thumbnail_tag generic_work %>
+      <%= link_to generic_work do %>
+        <%= tag "img", member_src_attributes(member: doc_presenter, size_key: :standard) %>
+      <% end %>
     </div>
 
     <div class="chf-results-list-item-content">
-      <% doc_presenter = Chf::IndexPresenter.new(generic_work, self) %>
-
       <h2 class="chf-results-list-item-head brand-alt-h2">
         <%= link_to generic_work.title_or_label, generic_work %>
       </h2>
