--- a/app/views/curation_concerns/generic_works/_generic_work.html.erb
+++ b/app/views/curation_concerns/generic_works/_generic_work.html.erb
@@ -24,6 +24,12 @@
     </div>
 
     <div class="chf-results-list-item-content">
+      <% if doc_presenter.has_values_for?(Solrizer.solr_name("genre_string", :stored_searchable)) %>
+        <div class="chf-results-list-item-genre">
+          <%= doc_presenter.field_value(Solrizer.solr_name("genre_string", :stored_searchable), join_type: :separator) %>
+        </div>
+      <% end %>
+
       <h2 class="chf-results-list-item-head brand-alt-h2" itemprop="name">
         <%= link_to generic_work.title_or_label, generic_work, itemprop: "url" %>
       </h2>
