--- a/app/views/curation_concerns/generic_works/_generic_work.html.erb
+++ b/app/views/curation_concerns/generic_works/_generic_work.html.erb
@@ -40,6 +40,12 @@
         </div>
       <% end %>
 
+      <% if doc_presenter.has_values_for?(Solrizer.solr_name('date_of_work', :stored_searchable)) %>
+        <div class="chf-results-list-item-date">
+          <%= doc_presenter.field_value(Solrizer.solr_name("date_of_work", :stored_searchable), join_type: :list) %>
+        </div>
+      <% end %>
+
       <% if doc_presenter.has_values_for?(Solrizer.solr_name("description", :stored_searchable)) %>
         <div class="chf-results-list-item-description">
           <% doc_presenter.description.each do |description| %>
