search results permission badge when needed

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -98,6 +98,10 @@ ol.catalog {
         color: $link-hover-color;
       }
     }
+    .chf-results-list-item-permission {
+      position: relative;
+      top: -0.3em;
+    }
   }
 
   .chf-results-list-item-genre {
