--- a/app/views/curation_concerns/generic_works/_generic_work.html.erb
+++ b/app/views/curation_concerns/generic_works/_generic_work.html.erb
@@ -31,6 +31,10 @@
       <% end %>
 
       <h2 class="chf-results-list-item-head brand-alt-h2" itemprop="name">
+        <% if doc_presenter.needs_permission_badge? %>
+          <small class="chf-results-list-item-permission"><%= doc_presenter.permission_badge %></small>
+        <% end %>
+
         <%= link_to generic_work.title_or_label, generic_work, itemprop: "url" %>
       </h2>
 
