search results less space in multi-paragraph description

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -125,6 +125,9 @@ ol.catalog {
 
   .chf-results-list-item-description {
     margin-top: ($line-height-computed / 2);
+    p {
+      margin-bottom: 0;
+    }
   }
 
   .chf-results-list-values {
