line height of special label

--- a/app/assets/stylesheets/local/site-wide.scss
+++ b/app/assets/stylesheets/local/site-wide.scss
@@ -28,6 +28,7 @@ dl.info {
   font-weight: 600;
   text-transform: uppercase;
   font-size: $font_size_base - 2px;
+  line-height: normal;
   letter-spacing: 0.02em;
   a:not(:focus):not(:hover) {
     color: #888;
