margin on search results genre

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -108,6 +108,7 @@ ol.catalog {
 
   .chf-results-list-item-genre {
     @extend %special-label;
+    margin-bottom: 0.25em;
   }
 
   .chf-results-list-item-additional-titles {
