--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -117,7 +117,7 @@ ol.catalog {
       font-size: $font-size-h4;
       font-family: $brand-alt-header-font;
       line-height: normal;
-      margin-top: 4px;
+      margin-top: ($line-height-computed / 2);
     }
   }
 
