search results dont grey out labels, too busy

--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -4,6 +4,8 @@ $bg-grey: #f1f3f4;
 $bg-lightly-shaded: $bg-grey;
 $brand-alt-header-font: "Roboto Condensed";
 $brand-alt-header-weight: 700;
+// should be lighter than normal muted, cause it's bolded a bit and such
+$special-label-muted-color: #888;
 
 
 
