--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -108,6 +108,7 @@ ol.catalog {
 
   .chf-results-list-item-genre {
     @extend %special-label;
+    color: $special-label-muted-color;
     margin-bottom: 4px;
   }
 
