--- a/app/views/_controls.html.erb
+++ b/app/views/_controls.html.erb
@@ -2,9 +2,19 @@
 <nav id="searchbar" class="navbar navbar-default navbar-static-top">
   <div class="container-fluid">
     <div class="row">
+
+      <%# custom CHF breadcrumbs up here instead of nav elements %>
+      <div class="breadcrumbs-navbar-wrapper navbar-left col-sm-5 col-md-6">
+        <%= render_breadcrumbs builder: Sufia::BootstrapBreadcrumbsBuilder %>
+      </div>
+
       <div class="searchbar-right navbar-right col-sm-7 col-md-6">
         <%= render partial: 'catalog/search_form' %>
       </div>
     </div>
   </div>
+
+
 </nav><!-- /.navbar -->
+<%# chf put constraints up here right under the search bar always %>
+<%= render 'catalog/constraints' %>
