--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -182,6 +182,7 @@ ol.catalog {
   a.remove {
     @extend .btn-default;
     width: 48px;
+    background-color: $bg-lightly-highlight;
   }
 
   .constraints-label {
@@ -193,9 +194,9 @@ ol.catalog {
   }
 
   .constraint-value {
-    background-color: $bg-lightly-highlight;
+    background-color: $bg-lightly-shaded;
     &:hover, &:focus {
-      background-color: $bg-lightly-highlight;
+      background-color: $bg-lightly-shaded;
     }
   }
 
@@ -203,5 +204,9 @@ ol.catalog {
     text-transform: uppercase;
     font-weight: 600;
   }
+}
+
+#sortAndPerPage {
+  border: none;
 }
 
