properly clear our floated constraints

--- a/app/views/_controls.html.erb
+++ b/app/views/_controls.html.erb
@@ -17,4 +17,6 @@
 
 </nav><!-- /.navbar -->
 <%# chf put constraints up here right under the search bar always %>
-<%= render 'catalog/constraints' %>
+<div class="clearfix">
+  <%= render 'catalog/constraints' %>
+</div>
