--- a/app/assets/stylesheets/local/site-wide.scss
+++ b/app/assets/stylesheets/local/site-wide.scss
@@ -2,6 +2,35 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i&amp;subset=latin-ext');
 
 
+.chf-container-fluid {
+  $sidebar-width: 235px;
+  $sidebar-space-right: $line-height-computed * 2;
+  $sidebar-space-left: 15px;
+
+  @extend .container-fluid;
+  // in our fluid container, sidebar should be fixed-width with good right margin
+  // emulated by padding, until the screen is too small for a sidebar column.
+  #sidebar {
+    width: $sidebar-width + $sidebar-space-left + $sidebar-space-right;
+    padding-left: $sidebar-space-left;
+    padding-right: $sidebar-space-right;
+    @media(max-width: $grid-float-breakpoint-max) {
+      width: auto;
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+  #content {
+    width: calc(100% - (#{$sidebar-width} + #{$sidebar-space-left} + #{$sidebar-space-right}));
+    float: left;
+    @media(max-width: $grid-float-breakpoint-max) {
+      width: auto;
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+}
+
 a {
   transition: color 0.25s ease;
 }
