--- a/app/views/_controls.html.erb
+++ b/app/views/_controls.html.erb
@@ -1,6 +1,6 @@
 <%# overrides https://github.com/projecthydra/sufia/blob/v7.3.0/app/views/_controls.html.erb %>
 <nav id="searchbar" class="navbar navbar-default navbar-static-top">
-  <div class="container-fluid">
+  <div class="chf-container-fluid">
     <div class="row">
 
       <%# custom CHF breadcrumbs up here instead of nav elements %>
@@ -17,6 +17,6 @@
 
 </nav><!-- /.navbar -->
 <%# chf put constraints up here right under the search bar always %>
-<div class="clearfix">
+<div class="chf-constraints-wrapper">
   <%= render 'catalog/constraints' %>
 </div>
