--- a/app/views/catalog/_search_header.html.erb
+++ b/app/views/catalog/_search_header.html.erb
@@ -5,4 +5,14 @@
 
 <%= render 'did_you_mean' %>
 
-<%= render 'sort_and_per_page' %>
+
+
+<%# render 'sort_and_per_page' %>
+<%# we render our own sort and per page controls, just to remove the bootstrap pull-right
+    class, so we can use flexbox instead without fighting with it.
+%>
+
+<div id="sortAndPerPage" class="chf-sort-and-per-page">
+  <%= render :partial => "paginate_compact", :object => @response if show_pagination? %>
+  <%= render_results_collection_tools wrapping_class: "search-widgets" %>
+</div>
