properly align constraints label

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -247,6 +247,7 @@ ol.catalog {
     font-weight: 600;
     margin-right: 0.66em;
     color: #888;
+    vertical-align: middle;
   }
 
   .constraint-value {
