push constraints to the right again

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -208,7 +208,7 @@ ol.catalog {
 .chf-constraints-wrapper {
   @extend .chf-container-fluid;
   @extend .clearfix;
-  text-align: center;
+  text-align: right;
 }
 
 #appliedParams.constraints-container {
