--- a/app/assets/stylesheets/local/navbar.scss
+++ b/app/assets/stylesheets/local/navbar.scss
@@ -39,3 +39,11 @@
     }
   }
 }
+
+.breadcrumbs-navbar-wrapper {
+  margin-top: 0.5em;
+  min-height: $input-height-base;
+  ul.breadcrumb {
+    margin-bottom: 0;
+  }
+}
