viewer keyboard shortcut legend more compact

--- a/app/assets/stylesheets/local/chf_image_viewer.scss
+++ b/app/assets/stylesheets/local/chf_image_viewer.scss
@@ -252,6 +252,8 @@ $chf_image_viewer_thumb_width: 60px; // Needs to match MemberHelper::VIEWER_THUM
           margin-bottom: 0;
         }
         .dropdown-menu {
+          font-size: 14px;
+
           left: auto;
           right: 5px;
 
