--- a/app/views/curation_concerns/base/_chf_image_viewer_navbar.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer_navbar.html.erb
@@ -56,7 +56,7 @@
       <ul class="dropdown-menu" aria-labelledby="btnViewerKeyboard">
         <li>
           <h3>Keyboard Shortcuts</h3>
-          <table class="table">
+          <table class="table table-condensed">
             <tr>
               <td>Previous image</td><td><kbd>shift + <i class="fa fa-arrow-left"></i></kbd> or <kbd>,</kbd></td>
             </tr>
