move brand-highlight-color to a global sass variable

--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -9,6 +9,8 @@ $brand-alt-header-font: "Roboto Condensed";
 $brand-alt-header-weight: 700;
 // should be lighter than normal muted, cause it's bolded a bit and such
 $special-label-muted-color: #888;
+$brand-highlight-color: #f15c2b; // an orange used on Distillations website, perhaps use as an alterante highlight sitewide
+
 
 // via experimentation, on search results page larger than this the
 // results column text is way too wide for reading text.
