change viewer zoom to fit icon

--- a/app/views/curation_concerns/base/_chf_image_viewer_navbar.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer_navbar.html.erb
@@ -37,7 +37,7 @@
     </a>
 
     <a class="viewer-navbar-btn btn btn-lg btn-primary viewer-zoom-fit viewer-thin-btn" id="viewer-zoom-fit" tabindex="0">
-      <i class="fa fa-home"></i>
+      <i class="fa fa-square-o"></i>
     </a>
     <a class="viewer-navbar-btn btn btn-lg btn-primary viewer-zoom-in viewer-thin-btn" id="viewer-zoom-in" tabindex="0">
       <i class="fa fa-search-plus"></i>
