--- a/app/views/catalog/_results_pagination.html.erb
+++ b/app/views/catalog/_results_pagination.html.erb
@@ -2,7 +2,7 @@
  <div class="row record-padding">
   <div class="col-md-12">
     <div class="pagination">
-      <%= paginate @response, :window => 2, :theme => 'twitter-bootstrap-3' %>
+      <%= paginate @response, :window => 2, :outer_window => 0, :theme => 'twitter-bootstrap-3' %>
     </div>
   </div>
  </div>
